--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ header{
 /********don't think********/
 .dontthink{
 	width:100%;
-	background-image:url('./images/cta-bg.jpg');
+	background-image:url('cta-bg.jpg');
 	background-position:center;
 	background-size:cover;
 	background-repeat:no-repeat;
@@ -204,7 +204,7 @@ header{
 /********CLASSES SCHEDULE********/
 .classes_schedule{
 	width:100%;
-	background-image:url('./images/schedule-bg.jpg');
+	background-image:url('schedule-bg.jpg');
 	background-position:center;
 	background-size:cover;
 	background-repeat:no-repeat;
@@ -350,7 +350,7 @@ height:50vw;
 .cform{
 	width:50%;
 	height:50vw;
-	background-image:url('./images/contact-bg.jpg');
+	background-image:url('contact-bg.jpg');
 	background-position:center;
 	background-repeat:no-repeat;
 	background-size:cover;
@@ -456,7 +456,7 @@ footer{
 	}
 	.togglebtn{
 	position:relative;
-	background-image:url('../images/menu-bar.png');
+	background-image:url('menu-bar.png');
     width:5vw;
     height:5vw;
     background-size:5vw;
@@ -466,7 +466,7 @@ footer{
 	cursor:pointer;
 	}
    .togglebtn.active{
-	  background-image:url('../images/menu-bar.png');
+	  background-image:url('menu-bar.png');
     width:5vw;
     height:5vw;
     background-size:4vw;
