--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 header{
     width:100%;
-   
+    height:100vh;
     background:rgba(0, 0, 0, 0.651);
     color:#fff;
 	
@@ -23,7 +23,7 @@ header{
 
 #background-video{
     
-   
+   height:100vh;
     width:100%;
     position:absolute;
 	top:0px;
