--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ header{
 
 .centerheading{
     width:100%;
-    height:30vw;
+    height:80vh;
     
     display:flex;
     flex-direction: column;
